Backed-out unintended change to src/neuron/nineml.py made in r957
git-svn-id: https://neuralensemble.org/svn/PyNN/trunk@963 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,7 +9,7 @@ Laurent Perrinet [6]
 Jochen Eppler [3,4]
 Dejan Pecevski [8]
 Nicolas Debeissat [10]
-Mikael Djurfeldt [12]
+Mikael Djurfeldt [12, 15]
 Michael Schmuker [11]
 Bernhard Kaplan [2]
 Thomas Natschlaeger [8]
@@ -29,3 +29,4 @@ Subhasis Ray [14]
 12 International Neuroinformatics Coordinating Facility, Stockholm, Sweden
 13 Blue Brain Project, Ecole Polytechnique Fédérale de Lausanne, Lausanne, Switzerland
 14 NCBS, Bangalore, India
+15 PDC, KTH, Stockholm, Sweden
