--- a/doc/README
+++ b/doc/README
@@ -10,11 +10,6 @@ To build the documentation in HTML format, run::
 
 Many of the files contain examples of interactive Python sessions. The validity of this code can be tested by running::
 
-    $ python testdocs.py -s neuron FILE.txt
-    $ python testdocs.py -s nest FILE.txt
-    $ python testdocs.py -s pcsim FILE.txt
-    $ python testdocs.py -s brian FILE.txt
-    
-Error messages due to differences in neuron id numbers between simulators can be ignored.
+    $ make doctest
 
 .. _Sphinx: http://sphinx.pocoo.org/
