--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ Michael Schmuker [11]
 Bernhard Kaplan [2]
 Thomas Natschlaeger [8]
 Subhasis Ray [14]
+Yury Zaytsev [15]
 
 1  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
 2  Kirchhoff Institute for Physics, University of Heidelberg, Heidelberg, Germany
@@ -29,3 +30,4 @@ Subhasis Ray [14]
 12 International Neuroinformatics Coordinating Facility, Stockholm, Sweden
 13 Blue Brain Project, Ecole Polytechnique Fédérale de Lausanne, Lausanne, Switzerland
 14 NCBS, Bangalore, India
+15 Institute of Neuroscience and Medicine (INM-6), Jülich Research Center, Jülich, Germany
