Recent versions of NEST require off-grid spikes to be explicitly allowed (trunk) - see ticket:242
git-svn-id: https://neuralensemble.org/svn/PyNN/trunk@1237 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ Michael Schmuker [11]
 Bernhard Kaplan [2]
 Thomas Natschlaeger [8]
 Subhasis Ray [14]
+Yury Zaytsev [16]
 
 1  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
 2  Kirchhoff Institute for Physics, University of Heidelberg, Heidelberg, Germany
@@ -30,3 +31,4 @@ Subhasis Ray [14]
 13 Blue Brain Project, Ecole Polytechnique Fédérale de Lausanne, Lausanne, Switzerland
 14 NCBS, Bangalore, India
 15 PDC, KTH, Stockholm, Sweden
+16 Institute of Neuroscience and Medicine (INM-6), Jülich Research Center, Jülich, Germany
