--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,7 @@ Bernhard Kaplan [2]
 Thomas Natschlaeger [8]
 Subhasis Ray [14]
 Yury Zaytsev [15]
+Alexandre Gravier
 
 1  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
 2  Kirchhoff Institute for Physics, University of Heidelberg, Heidelberg, Germany
