--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,8 @@ The following people have contributed to PyNN. Their affiliations at the time of
 * Bernhard Kaplan [2]
 * Thomas Natschlaeger [8]
 * Subhasis Ray [14]
+* Yury Zaytsev [16]
+* Jan Antolik [1]
 
 
 1.  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
@@ -31,3 +33,4 @@ The following people have contributed to PyNN. Their affiliations at the time of
 13. Blue Brain Project, Ecole Polytechnique Fédérale de Lausanne, Lausanne, Switzerland
 14. NCBS, Bangalore, India
 15. PDC, KTH, Stockholm, Sweden
+16. Institute of Neuroscience and Medicine (INM-6), Jülich Research Center, Jülich, Germany
