--- a/changelog
+++ b/changelog
@@ -1,12 +1,12 @@
 =====================
-Release 0.8a1 (r????)
+Release 0.8a1 (r1271)
 =====================
 
 see doc/releases/0.8-alpha-1.txt
 
-====================
-Release 0.7.5 (r???)
-====================
+=====================
+Release 0.7.5 (r1258)
+=====================
 
 ??
 
