--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ The following people have contributed to PyNN. Their affiliations at the time of
 * Subhasis Ray [14]
 * Yury Zaytsev [16]
 * Jan Antolik [1]
+* Alexandre Gravier
 
 
 1.  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
