--- a/changelog
+++ b/changelog
@@ -8,7 +8,10 @@ see doc/releases/0.8-alpha-1.txt
 Release 0.7.5 (r1258)
 =====================
 
-??
+* works with NEST 2.2
+* Fixed problem with nest.Recorder.read_local_data when running with more than one thread (see ticket:244) 
+* Fixed a problem with weights changes not being taken into account in Brain backend (see ticket:235) 
+* Fixed a problem when trying to retrieve data in the middle of a run, with NEST backend (see ticket:236) 
 
 =====================
 Release 0.7.4 (r1195)
@@ -33,7 +36,6 @@ Release 0.7.2 (r995)
 ====================
 
 Fixed a bug whereby the `connect()` function didn't work with single IDs (see ticket:195)
-
 
 ====================
 Release 0.7.1 (r958)
