Added CloneConnector class

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,7 @@ The following people have contributed to PyNN. Their affiliations at the time of
 * Yury Zaytsev [16]
 * Jan Antolik [1]
 * Alexandre Gravier
+* Thomas Close [17]
 
 
 1.  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
@@ -35,3 +36,4 @@ The following people have contributed to PyNN. Their affiliations at the time of
 14. NCBS, Bangalore, India
 15. PDC, KTH, Stockholm, Sweden
 16. Institute of Neuroscience and Medicine (INM-6), Jülich Research Center, Jülich, Germany
+17. Okinawa Institute of Science and Technology (OIST), Onna-son, Okinawa, Japan
