--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+========================================================
+Release 0.8a2 (ee4d813c668313afff9cc5ccee7d306dd0d8760f)
+========================================================
+
+see doc/releases/0.8-alpha-2.txt
+
 =====================
 Release 0.8a1 (r1271)
 =====================
