--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+=============
+Release 0.8b1
+=============
+
+see doc/releases/0.8-beta-1.txt
+
 ========================================================
 Release 0.8a2 (ee4d813c668313afff9cc5ccee7d306dd0d8760f)
 ========================================================
