README of exampkes updated

--- a/examples/README
+++ b/examples/README
@@ -5,7 +5,7 @@
 1. If you want to run all the examples with a specific simulator (nest, neuron, brian or mock), you write the following commands:
 
 > cd tools
-> python run_all_examples.py nest/neuron/brian/mock
+> python run_all_examples.py NEST/NEURON/Brian/MOCK
 
 The logs, results and the plots as png files will all be put in tools/Results/*. 
 
