--- a/AUTHORS
+++ b/AUTHORS
@@ -18,6 +18,7 @@ The following people have contributed to PyNN. Their affiliations at the time of
 * Jan Antolik [1]
 * Alexandre Gravier
 * Thomas Close [17]
+* Oliver Breitwieser [2]
 
 
 1.  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
