Preparing the 0.8beta2 release.

--- a/changelog
+++ b/changelog
@@ -1,18 +1,24 @@
-=============
-Release 0.8b1
-=============
+================
+Release 0.8beta2
+================
+
+see doc/releases/0.8-beta-2.txt
+
+===============
+Release 0.8beta1
+================
 
 see doc/releases/0.8-beta-1.txt
 
-========================================================
-Release 0.8a2 (ee4d813c668313afff9cc5ccee7d306dd0d8760f)
-========================================================
+============================================================
+Release 0.8alpha2 (ee4d813c668313afff9cc5ccee7d306dd0d8760f)
+============================================================
 
 see doc/releases/0.8-alpha-2.txt
 
-=====================
-Release 0.8a1 (r1271)
-=====================
+=========================
+Release 0.8alpha1 (r1271)
+=========================
 
 see doc/releases/0.8-alpha-1.txt
 
