--- a/AUTHORS
+++ b/AUTHORS
@@ -19,7 +19,8 @@ The following people have contributed to PyNN. Their affiliations at the time of
 * Alexandre Gravier
 * Thomas Close [17]
 * Oliver Breitwieser [2]
-
+* Jannis Schücker [16]
+* Maximilian Schmidt [16]
 
 1.  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
 2.  Kirchhoff Institute for Physics, University of Heidelberg, Heidelberg, Germany
