--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,10 @@ The following people have contributed to PyNN. Their affiliations at the time of
 * Jannis Schücker [16]
 * Maximilian Schmidt [16]
 * Christian Roessert [13]
+* Shailesh Appukuttan [1]
+* Elodie Legouée [1]
+* Joffrey Gonin [1]
+
 
 1.  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
 2.  Kirchhoff Institute for Physics, University of Heidelberg, Heidelberg, Germany
