--- a/doc/release_notes.txt
+++ b/doc/release_notes.txt
@@ -6,6 +6,7 @@ Release notes
 .. toctree::
    :maxdepth: 1
 
+   releases/0.9.2.txt
    releases/0.9.1.txt
    releases/0.9.0.txt
    releases/0.8.3.txt
