--- a/AUTHORS
+++ b/AUTHORS
@@ -26,6 +26,7 @@ The following people have contributed to PyNN. Their affiliations at the time of
 * Elodie Legouée [1]
 * Joffrey Gonin [1]
 * Ankur Sinha [18]
+* Håkon Mørk [19]
 
 
 1.  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
@@ -46,3 +47,4 @@ The following people have contributed to PyNN. Their affiliations at the time of
 16. Institute of Neuroscience and Medicine (INM-6), Jülich Research Center, Jülich, Germany
 17. Okinawa Institute of Science and Technology (OIST), Onna-son, Okinawa, Japan
 18. Biocomputation group, University of Hertfordshire, Hatfield, United Kingdom.
+19. Norwegian University of Life Sciences, Ås, Norway
