--- a/AUTHORS
+++ b/AUTHORS
@@ -29,6 +29,7 @@ The following people have contributed to PyNN. Their affiliations at the time of
 * Håkon Mørk [19]
 * Andrei Moise [20]
 * Onur Ates [20]
+* Rémy Cagnol [21]
 
 
 1.  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
@@ -51,3 +52,4 @@ The following people have contributed to PyNN. Their affiliations at the time of
 18. Biocomputation group, University of Hertfordshire, Hatfield, United Kingdom.
 19. Norwegian University of Life Sciences, Ås, Norway
 20. Paris-Saclay Institute of Neuroscience, CNRS/Université Paris-Saclay, Gif sur Yvette, France
+21. Faculty of Mathematics and Physics, Charles University, Prague, Czechia
