--- a/doc/release_notes.txt
+++ b/doc/release_notes.txt
@@ -6,6 +6,7 @@ Release notes
 .. toctree::
    :maxdepth: 1
 
+   releases/0.9.6.txt
    releases/0.9.5.txt
    releases/0.9.4.txt
    releases/0.9.3.txt
