--- a/changelog
+++ b/changelog
@@ -1,4 +1,64 @@
 =============
+Release 0.9.6
+=============
+
+see doc/releases/0.9.6.txt
+
+=============
+Release 0.9.5
+=============
+
+see doc/releases/0.9.5.txt
+
+=============
+Release 0.9.4
+=============
+
+see doc/releases/0.9.4.txt
+
+=============
+Release 0.9.3
+=============
+
+see doc/releases/0.9.3.txt
+
+=============
+Release 0.9.2
+=============
+
+see doc/releases/0.9.2.txt
+
+=============
+Release 0.9.1
+=============
+
+see doc/releases/0.9.1.txt
+
+=============
+Release 0.9.0
+=============
+
+see doc/releases/0.9.0.txt
+
+=============
+Release 0.8.3
+=============
+
+see doc/releases/0.8.3.txt
+
+=============
+Release 0.8.2
+=============
+
+see doc/releases/0.8.2.txt
+
+=============
+Release 0.8.1
+=============
+
+see doc/releases/0.8.1.txt
+
+=============
 Release 0.8.0
 =============
 
