--- a/AUTHORS
+++ b/AUTHORS
@@ -30,6 +30,7 @@ The following people have contributed to PyNN. Their affiliations at the time of
 * Andrei Moise [20]
 * Onur Ates [20]
 * Rémy Cagnol [21]
+* Lungsi Sharma [20]
 
 
 1.  Unité de Neuroscience, Information et Complexité, CNRS, Gif sur Yvette, France
